# Cleanarr

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-release.yml
backend/: pyproject.toml
backend/src/cleanarr/: __init__.py  main.py
backend/src/cleanarr/api/: app.py  auth_schemas.py  config_schemas.py  dashboard.py  library_schemas.py  schemas.py
backend/src/cleanarr/application/: __init__.py  authentication.py  configuration.py  ports.py  resolver.py  results.py  safety.py  service.py  strategies.py
backend/src/cleanarr/domain/: __init__.py  config.py  errors.py  models.py
backend/src/cleanarr/infrastructure/: auth.py  clients.py  config_store.py  container.py  logging.py  settings.py
backend/tests/: fakes.py
backend/tests/integration/: test_api.py  test_clients.py
backend/tests/scenarios/: test_cascade_flows.py
backend/tests/unit/: test_config_urls.py  test_resolver.py  test_safety.py  test_service.py
deploy/: Dockerfile  docker-compose.yml
deploy/k8s/: deployment.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secret.example.yaml  service.yaml
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  cleanarr-app.tsx  index.css  main.tsx
frontend/src/components/: theme-provider.tsx  theme-toggle.tsx
frontend/src/components/ui/: modal.tsx  (+2 more)
frontend/src/lib/: auth.ts  dashboard.ts  library.ts  runtime-config.ts
